<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_cupboard"
        android:title="Sunglass"/>

    <item
        android:id="@+id/nav_chair"
        android:title="Opticals"/>


    <item
        android:id="@+id/nav_others"
        android:title="Category"/>

</menu>