<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutProduct"
    android:orientation="vertical"
    android:layout_width="168dp"
    android:layout_margin="3dp"
    android:padding="6dp"
    android:background="@drawable/bg_productdesign"
    android:elevation="20dp"
...
